# team21-vooglaadija

./: .coverage.cachy.pid126554.XQi7JT5x.Hr4ZeHom23Nh  .coverage.cachy.pid126557.XdBPVu6x.HArn1Y9EwmOh  .coverage.cachy.pid126560.XUToEuwx.HjZwCg6njWKh  .coverage.cachy.pid126563.X0uWW51x.Hl7WZV2u3B7h  .coverage.cachy.pid126566.Xqqxjgfx.HWVhRtRo16Dh  .coverage.cachy.pid126569.XeJLZAqx.HhlJ1aOD1SDh  .dockerignore  .env-example  .env.example  .gitignore  .kilocodemodes  .safety-policy.yml  Dockerfile  Dockerfile.worker  FRONTEND_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  PROJECT_ANALYSIS.md  PROJECT_ROADMAP.md  README.md  RESEARCH.md  SPRINT_PLAN.md  SPRINT_SETUP_GUIDE.md  alembic.ini  coverage.xml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.backup  entrypoint-worker.sh  entrypoint.sh  gitai-openrouter-setup-complete.md  gitai-setup-complete.md  gitai-setup-summary.md  gitai-suhailroushan-openrouter-summary.md  hatch.toml  labels.md  (+29 more)
.gitai/: config.yaml
.gitai/prompts/: commit_prompt.txt  pr_prompt.txt
.github/: DAILY_STANDUP.md  PROJECTS_ROADMAP_CONFIG.md  PROJECTS_SETUP.md  SPRINT1_ISSUES.md  SPRINT_RETROSPECTIVE.md  SPRINT_REVIEW.md
.github/ISSUE_TEMPLATE/: bitesized-tasks.md  bug-report.md  bug_report.md  feature_request.md  sprint-task.md
.github/workflows/: ai-pr-reviewer.yml  codeql.yml  dependabot.yml  deploy-production.yml  docker-compose-test.yml  docker-develop.yml  docker-staging.yml  docker.yml  fast-forward.yml  fastapi-test.yml  sprint-automation.yml  test-services.yml  test.yml
.kilo/agents/: api-reviewer.md  security-auditor.md  test-engineer.md
.kilo/plans/: 1774440113185-mighty-sailor.md
.kilocode/: .gitignore  README.md  agents.md  ci-config.json  settings.json  setup-mcp.sh
.kilocode/mcp/: mcp.json
.kilocode/modes/: cobalt-api-dev.json  cobalt-security.json  cobalt-web-dev.json
.kilocode/rules/: api-conventions.md  auth-rules.md  db-rules.md  docker-rules.md  testing-rules.md
.kilocode/shell/: aliases.sh
.kilocode/skills/: gh-issue-management  gh-linking-branches-to-issues  gh-project-management  gh-set-active-project  gh-verifying-context
.kilocode/subagents/: microservices-planner.md  service-auditor.md  test-generator.md
.kilocode/templates/: new-service.md
.kilocode/workflows/: deploy-check.md  docker-stack.md  local-dev.md  microservices-migration.md  new-service.md  pr-review.md  run-tests.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_expires_at_index.py  003_add_composite_indexes.py  003_add_updated_at.py  004_add_retry_columns.py  005_add_updated_at.py  006_add_outbox_table.py  007_add_retry_columns.py  008_change_ids_to_native_uuid.py  009_add_soft_delete_and_cascade.py  009_add_username_to_users.py  009b_fix_version_column.py  010_add_user_status_composite_index.py  013_add_correlation_id_to_outbox.py  cb2699335d57_create_outbox_table.py
api/: package.json
app/: auth.py  config.py  database.py  logging_config.py  main.py  metrics.py
app/api/: limiter.py  middleware.py  rate_limit_config.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  download_job.py  outbox.py  user.py
app/schemas/: download.py  error.py  token.py  user.py
app/services/: auth_service.py  circuit_breaker.py  outbox_service.py  pubsub_service.py  retry_service.py  yt_dlp_service.py
app/templates/: base.html  dashboard.html  login.html  register.html  settings.html  terms.html
app/utils/: exceptions.py  username.py  validators.py
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER-MONITORING.md  NETDATA_INTEGRATION_PLAN.md  OPS.md  PRODUCTION_DEPLOYMENT.md  PSYCOPG3_MIGRATION.md  STRUCTLOG_INTEGRATION.md  STRUCTURE.md
docs/sprint-planning/: README.md  sprint-1-checklist.md  sprint-1-foundation.md  sprint-1-planning-agenda.md  sprint-2-auth-ui.md  sprint-2-planning-agenda.md  sprint-3-downloads-dashboard.md  sprint-3-planning-agenda.md  sprint-4-planning-agenda.md  sprint-4-status-polling.md  sprint-backlog-overview.md
frontend/: .browserslistrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
infra/: otel-collector-config.yml
infra/backup/: README.md  backup.sh  docker-compose.backup.yml
infra/certbot/: docker-compose.certbot.yml
infra/deploy/: README.md  copy-certs.sh  deploy.sh  remote-deploy.sh
infra/grafana/: dashboard-provider.yml
infra/netdata/: go.d.conf
infra/nginx/: default.conf  nginx.production.conf  nginx.ssl.local.conf
infra/prometheus/: prometheus.yml
infra/redis/: redis.conf
infra/ssl/: README.md  fullchain.pem  privkey.pem
internal/: README.md
internal/01-analysis/: project-analysis.md
internal/02-planning/: enhancement-plan.md  enhancement-proposal.md  fork-plan.md  migration-strategy.md
internal/03-reviews/: README.md  executive-summary.md  frontend-review.md  internal-review.md  migration-checklist.md  performance-optimizations.md  risk-assessment.md  svelte-5-migration-guide.md  webcodecs-integration.md
internal/04-communications/: discord-recruitment-message.md
research/: kilo-cli-deep-research.md
research/analysis/: PODMAN.md  PROJECT_ANALYSIS.md  STORAGE_QUESTION.md  podman-compose-issues-analysis.md  production-analysis.md  worker.md
research/course/: Junior_To_Senior_Course.md  Junior_To_Senior_Course_en-US.md
research/frontend-architecture-2026/: report.md
research/mediaforge-research/: mediaforge-research-minimax.md
research/planning/: FUTURE_PLAN.md  TODO.md
research/presentations/: Resilient-by-Design.html  gamma.md  video-plan-analysis.html  vooglaadija-presentation.pptx  vooglaadija-visual-presentation.html  vooglaadija-visual-presentation.pptx
scripts/: claim-netdata.sh  cleanup-docker.sh  install-netdata.sh  test_download.py
tests/: conftest.py  test_auth_module.py  test_config.py  test_main.py
vooglaadija-presentation/: bundle.html
web/: package.json
worker/: entrypoint-worker.sh  health.py  main.py  processor.py  queue.py  zombie_sweeper.py
(+128 files in other folders)
